feat(SP-39): implement endpoint to add new portfolio for service provider
